Closed
Bug 1222919
Opened 10 years ago
Closed 10 years ago
Make GonkDecoderManager::ProcessFlush() virtual rather than Flush().
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
RESOLVED
FIXED
mozilla45
People
(Reporter: jhlin, Assigned: jhlin)
References
Details
Attachments
(1 file, 1 obsolete file)
5.27 KB,
patch
|
jhlin
:
review+
mpotharaju
:
approval‑mozilla‑b2g44+
|
Details | Diff | Splinter Review |
Flush() is called by reader and runs on reader thread. To customize flush behavior subclasses should implement ProcessFlush(), which runs on decoder looper thread.
Assignee | ||
Comment 1•10 years ago
|
||
Assignee | ||
Comment 2•10 years ago
|
||
Comment on attachment 8684795 [details] [diff] [review]
Make ProcessFlush() virtual.
GonkAudioDecoderManager and GonkVideoDecoderManager overrides Flush() without protecting their data members. Overriding ProcessFlush() instead seems better IMHO.
Attachment #8684795 -
Flags: review?(jyavenard)
Updated•10 years ago
|
Attachment #8684795 -
Flags: review?(jyavenard) → review+
Assignee | ||
Comment 3•10 years ago
|
||
Assignee | ||
Updated•10 years ago
|
Attachment #8684795 -
Attachment is obsolete: true
Assignee | ||
Comment 4•10 years ago
|
||
Comment on attachment 8685245 [details] [diff] [review]
Make ProcessFlush() virtual. r=jya
Carry r+ from jya.
Attachment #8685245 -
Flags: review+
Assignee | ||
Comment 5•10 years ago
|
||
Keywords: checkin-needed
Keywords: checkin-needed
![]() |
||
Comment 7•10 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Assignee | ||
Comment 8•10 years ago
|
||
Comment on attachment 8685245 [details] [diff] [review]
Make ProcessFlush() virtual. r=jya
NOTE: Please see https://wiki.mozilla.org/Release_Management/B2G_Landing to better understand the B2G approval process and landings.
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 1222919
User impact if declined: occasional video app crashes if seek continuously
Testing completed: video app doesn't crash
Risk to taking this patch (and alternatives if risky): low
String or UUID changes made by this patch:
Attachment #8685245 -
Flags: approval‑mozilla‑b2g44?
![]() |
||
Comment 10•10 years ago
|
||
Comment on attachment 8685245 [details] [diff] [review]
Make ProcessFlush() virtual. r=jya
Approved for 2.5 uplift.
Thanks
Attachment #8685245 -
Flags: approval‑mozilla‑b2g44? → approval‑mozilla‑b2g44+
![]() |
||
Comment 11•10 years ago
|
||
this has problems on uplift:
warning: conflicts during merge.
merging dom/media/platforms/gonk/GonkMediaDataDecoder.cpp incomplete! (edit conflicts, then use 'hg resolve --mark')
merging dom/media/platforms/gonk/GonkMediaDataDecoder.h
merging dom/media/platforms/gonk/GonkVideoDecoderManager.h
abort: unresolved conflicts, can't continue
(use hg resolve and hg graft --continue)
could you take a look? thanks!
Flags: needinfo?(jolin)
Assignee | ||
Comment 12•10 years ago
|
||
(In reply to Carsten Book [:Tomcat] from comment #11)
> this has problems on uplift:
>
> warning: conflicts during merge.
> merging dom/media/platforms/gonk/GonkMediaDataDecoder.cpp incomplete! (edit
> conflicts, then use 'hg resolve --mark')
> merging dom/media/platforms/gonk/GonkMediaDataDecoder.h
> merging dom/media/platforms/gonk/GonkVideoDecoderManager.h
> abort: unresolved conflicts, can't continue
> (use hg resolve and hg graft --continue)
>
> could you take a look? thanks!
Sorry, looks like this patch depends on the one in bug 1216895. I'll mark that as approval‑mozilla‑b2g44.
Flags: needinfo?(jolin)
![]() |
||
Comment 13•10 years ago
|
||
mahe ping for the uplift approval requests for 1216895
Flags: needinfo?(mpotharaju)
![]() |
||
Comment 14•10 years ago
|
||
Marked this one and dependent bug for 2.5 uplift.
Thanks
Flags: needinfo?(mpotharaju)
![]() |
||
Comment 15•10 years ago
|
||
bugherder uplift |
status-b2g-v2.5:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•