Bug 1222919 - Make ProcessFlush() virtual. r=jya