dom/media/platforms/gonk/GonkVideoDecoderManager.h
@@ -51,17 +51,18 @@ public:
 
   nsresult Shutdown() override;
 
+  static void RecycleCallback(TextureClient* aClient, void* aClosure);
+
+protected:
   // Bug 1199809: workaround to avoid sending the graphic buffer by making a
   // copy of output buffer after calling flush(). Bug 1203859 was created to
   // reimplementing Gonk PDM on top of OpenMax IL directly. Its buffer
   // management will work better with Gecko and solve problems like this.
-  nsresult Flush() override
+  void ProcessFlush() override
   {
     mNeedsCopyBuffer = true;
-    return GonkDecoderManager::Flush();
+    GonkDecoderManager::ProcessFlush();
   }
-
-  static void RecycleCallback(TextureClient* aClient, void* aClosure);
 
 private:
   struct FrameInfo
